--- a/src/pages/welcome/welcome.html
+++ b/src/pages/welcome/welcome.html
@@ -2,15 +2,6 @@
   <div padding-left class="logo">
     <h2><span id="top">Welcome to</span><br>
     <span id="bottom">Makan Apa</span></h2><br>
-    <span id="botton"><p>Please create a logo :)</p></span>
+    <span id="botton"><p>You will be redirected in 3 seconds ...</p></span>
   </div>
-
-
-  <button 
-    ion-button 
-    color="colorWhite" 
-    outline 
-    (click)="skipPage()">
-  Start (just temporary button)
-  </button>
 </ion-content>
