Added logo and new background style

--- a/src/pages/welcome/welcome.html
+++ b/src/pages/welcome/welcome.html
@@ -1,7 +1,13 @@
 <ion-content padding scrollbar-y-auto>
-  <div padding-left class="logo">
+  <!-- <div padding-left class="logo">
     <h2><span id="top">Welcome to</span><br>
     <span id="bottom">Makan Apa</span></h2><br>
     <span id="botton"><p>You will be redirected in 3 seconds ...</p></span>
-  </div>
+  </div> -->
+
+
+  <img alt="logo" src="../assets/imgs/main-logo.png" style="width:90%"> 
+  
 </ion-content>
+
+
