Animated the logo

--- a/src/pages/welcome/welcome.html
+++ b/src/pages/welcome/welcome.html
@@ -6,8 +6,8 @@
   </div> -->
 
 
-  <img alt="logo" src="../assets/imgs/main-logo.png" style="width:75%"> 
+  <img [@fadeOut] *ngIf="show" alt="logo" src="../assets/imgs/main-logo.png" style="width:75%"> 
+
+  <!-- <img [@fadeInOut] *ngIf="show" alt="logo" src="../assets/imgs/main-logo.png" style="width:75%"> -->
   
 </ion-content>
-
-
