--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -17,7 +17,7 @@
 
   <ion-fab [@shake]="state" (@shake.done)="onEnd($event)" padding right bottom>
       <button (click)="openDishes()" ion-fab>
-        <ion-icon color="secondary" name="add"></ion-icon>
+        <ion-icon name="add"></ion-icon>
       </button>
     </ion-fab>
 </ion-content>
