Blergh. Stupid. Bitch

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -9,11 +9,20 @@
 
 <ion-content padding scrollbar-y-auto>
 
+    <ion-refresher (ionRefresh)="doRefresh($event)">
+      <ion-refresher-content  pullingText="Get dishes .."></ion-refresher-content>
+    </ion-refresher>
+
+
     <div padding-left class="intro">
         <p><span class="big">Oops!</span><br>
            It seems that you don't have enough dishes to spin the wheel!</p>
         <p>Please add dishes by pressing<br>the button in the bottom corner.</p>
     </div>
+
+  <ul *ngFor="let dish of dishes">
+    <li>{{dish.name}} - {{dish.active}}</li>
+  </ul >
 
   <ion-fab [@shake]="state" (@shake.done)="onEnd($event)" padding right bottom>
       <button (click)="openDishes()" ion-fab>
