Added wheel component

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -4,8 +4,8 @@
   </ion-navbar>
 </ion-header>
 
+<wheel></wheel>
 <ion-content padding scrollbar-y-auto>
-    
     <div padding-left class="intro">
         <p><span class="big">Oops!</span><br>
            It seems that you don't have enough dishes to spin the wheel!</p>
@@ -18,3 +18,5 @@
       </button>
     </ion-fab>
 </ion-content>
+
+
