--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,10 +1,9 @@
 <ion-slides pager="true">
     <ion-slide>
-      <img style="width:50%" src="../assets/imgs/main-logo.png" />
+      <img style="width:75%" src="../assets/imgs/makanapa-wheel.png" />
       <ion-row>
           <ion-col>
-            <p>Oh no! It seems that you don't have enough dishes to spin the wheel.
-                Let's explain how this app works!
+            <p>Oops. You don't have enough dishes<br>to spin the wheel
             </p> 
           </ion-col>
         </ion-row>
