--- a/src/pages/dishes-modal/dishes-modal.html
+++ b/src/pages/dishes-modal/dishes-modal.html
@@ -6,19 +6,6 @@
   
 <ion-content scroll="true">
 
-  <p padding *ngIf="showNoDishesWarning" class="error">Oh dear .. something went wrong while collecting the dishes! Please try again.</p>
-  <div [hidden]="!showForm">
-    <form *ngFor="let dish of dishes; let idx = index" [formGroup]="form" (ngSubmit)="addDish(form, dish)">
-      <ion-card [ngClass]="{'disabled-block':dish.active === false, 'block':dish.active === true }"> 
-        <ion-title (click)="openInputField(idx)" *ngIf="highLighted !== idx">{{ dish.name }}</ion-title>
-        <ion-item *ngIf="highLighted === idx" class="item item-trns">
-          <ion-input (ionChange)="checkInput(form, dish)" type="text" placeholder="{{dish.name}}" 
-            formControlName="dishName" clearInput></ion-input>
-          <ion-icon *ngIf="showCheckmark" name="checkmark" item-right></ion-icon>
-        </ion-item>
-      </ion-card>
-    </form>
-  </div>
+  <dishes-form></dishes-form>
 
-  <wheel [hidden]="showForm"></wheel>
 </ion-content>
