--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -29,7 +29,7 @@
   </ion-slides>
 
 <ion-fab [@shake]="state" (@shake.done)="onEnd($event)" padding right bottom>
-  <button color="secondary" (click)="openDishes()" ion-fab>
+  <button color="secondary" (click)="openActionPage()" ion-fab>
     <ion-icon name="add"></ion-icon>
   </button>
 </ion-fab>
