Refactoring life cycle events

--- a/src/pages/action/action.html
+++ b/src/pages/action/action.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar hideBackButton="true" color="primary">  <!-- hideBackButton="true"  --> 
+  <ion-navbar hideBackButton="false" color="primary">  <!-- hideBackButton="true"  --> 
     <img alt="logo" src="../assets/imgs/main-logo.png" style="width:50%"/>
   </ion-navbar>
 </ion-header>
