Converted to PWA

--- a/src/pages/welcome-splash/welcome-splash.html
+++ b/src/pages/welcome-splash/welcome-splash.html
@@ -1,3 +1,14 @@
-<ion-content padding scrollbar-y-auto>
+<!-- <ion-content padding scrollbar-y-auto>
   <img [@fadeOut] *ngIf="show" alt="logo" src="../assets/imgs/main-logo.png" style="width:75%">   
+</ion-content> -->
+<ion-content scrollbar-y-auto>
+  <div class="splash-bg"></div>
+  
+  <div class="splash-info">
+    <div class="splash-logo"></div>
+    <div class="splash-intro">
+      SOON ONLINE
+    </div>
+
+  </div>
 </ion-content>
