--- a/src/pages/welcome-splash/welcome-splash.html
+++ b/src/pages/welcome-splash/welcome-splash.html
@@ -14,9 +14,7 @@
 
   <div class="splash-info">
     <div class="splash-logo"></div>
-    <div class="splash-intro">
-      SOON ONLINE
-    </div>
+    <div class="splash-intro" (click)="loadWheel()"></div>
   </div>
 </ion-content>
 
